--- a/meta.yaml
+++ b/meta.yaml
@@ -1,20 +1,18 @@
 package:
   name: nodejs
-  version: 0.10.32
+  version: 0.12.5
 
 build:
   number: {{environ.get('BINSTAR_BUILD', 1)}}
 
 source:
-  fn: node-v0.10.32-linux-x64.tar.gz [linux64]
-  url: http://nodejs.org/dist/v0.10.32/node-v0.10.32-linux-x64.tar.gz [linux64]
-  # sha: fadefc15a992d21bd19d0d3ec174390d1e7fcb72
-  md5: 126ed002d88315b8d37cec1ee4915454 [linux64]
+  fn: node-v0.12.5-linux-x64.tar.gz [linux64]
+  url: https://nodejs.org/dist/v0.12.5/node-v0.12.5-linux-x64.tar.gz [linux64]
+  md5: d27a934de4763550e0f9fd180428b0be [linux64]
 
-  fn: node-v0.10.32-darwin-x64.tar.gz [osx]
-  url: http://nodejs.org/dist/v0.10.32/node-v0.10.32-darwin-x64.tar.gz [osx]
-  # sha: e2e1e876514ee33b2dd019c25dcb4bc7cdaff414 [osx]
-  md5: bd5a65196c2ebe33c0251f19c5321b52 [osx]
+  fn: node-v0.12.5-darwin-x64.tar.gz [osx]
+  url: https://nodejs.org/dist/v0.12.5/node-v0.12.5-darwin-x64.tar.gz [osx]
+  md5: 0d7ed0f9aab35c791b8064f18b6e2745 [osx]
 
 test:
   commands:
