--- a/meta.yaml
+++ b/meta.yaml
@@ -1,18 +1,18 @@
 package:
   name: nodejs
-  version: 4.1.0
+  version: 4.2.0
 
 build:
   number: {{environ.get('BINSTAR_BUILD', 1)}}
 
 source:
-  fn: node-v4.1.0-linux-x64.tar.gz [linux64]
-  url: https://nodejs.org/dist/v4.1.0/node-v4.1.0-linux-x64.tar.gz [linux64]
-  md5: 5110ec82838293fbbfb67df9cd72b029 [linux64]
+  fn: node-v4.2.0-linux-x64.tar.gz [linux64]
+  url: https://nodejs.org/dist/v4.2.0/node-v4.2.0-linux-x64.tar.gz [linux64]
+  sha256: 98b60c86d541f44c5d07111f9ffc9a81848f976cfbe84f71cb9c7d6bfd34e1a4 [linux64]
 
   fn: node-v4.1.0-darwin-x64.tar.gz [osx]
-  url: https://nodejs.org/dist/v4.1.0/node-v4.1.0-darwin-x64.tar.gz [osx]
-  md5: 8ca7483120975d1510ab651d56630941 [osx]
+  url: https://nodejs.org/dist/v4.2.0/node-v4.2.0-darwin-x64.tar.gz [osx]
+  sha256: ff1c4b13a10c0789709cd73980a496b27e434207802989377ec4cb56302a1ebc [osx]
 
 test:
   commands:
